[project]
name = "venue-enrichment"
version = "0.1.0"
description = "search the internet for music venues"
authors = [{ name = "Johannes Naylor", email = "jonaylor89@gmail.com" }]
dependencies = [
    "scrapegraphai>=1.7.4",
    "pydantic>=2.7.4",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/venue_enrichment"]
